# unified-crm-finance

./: .env.example  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  deploy.py  docker-compose.yml  package-lock.json  package.json  start-dev.bat  start-dev.sh  Выписка по счету(1С).txt
.github/: DEPLOYMENT.md
.gsd/: PROJECT.md  REQUIREMENTS.md
.gsd.migrating/: CODEBASE.md  DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  event-log.jsonl  gsd.db  gsd.db-shm  gsd.db-wal  last-snapshot.md  metrics.json  notifications.jsonl  state-manifest.json
.planning/: CODEBASE.md  DECISIONS.md  PREFERENCES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  doctor-history.jsonl  event-log.jsonl  gsd.db-shm  gsd.db-wal  last-snapshot.md  metrics.json  notifications.jsonl  state-manifest.json
apps/worker/: .gitignore  Dockerfile  conftest.py  pyproject.toml  requirements.txt
apps/worker/app/: __init__.py  celery_app.py  config.py  consumer.py  database.py  db.py  health.py  main.py  tasks.py
apps/worker/tests/: __init__.py  conftest.py  test_health.py
docs/: 00-executive-summary.md  01-introduction.md  02-current-systems.md  03-target-architecture.md  04-tech-stack.md  05-data-model.md  06-module-crm.md  07-module-deals.md  08-module-contracts.md  09-module-projects.md  10-module-procurement.md  11-module-finance.md  12-module-analytics.md  13-module-notifications.md  14-api-contracts.md  15-security-rbac.md  16-non-functional.md  17-risks-mitigations.md  18-roadmap.md  19-testing-strategy.md
session-mcp/: README.md  evals.xml  (+4 more)
(+1449 files in other folders)
